# mipt-homework

./: .gitignore  CMakeLists.txt  README.md
arc_cache/: CMakeLists.txt  twoq_cache_runner.cpp
hwc_twoq_cache/: CMakeLists.txt  hwc_twoq_cache.cpp  regression_tests.cpp
hwc_twoq_cache/test_data/: 001.perf
hwc_twoq_cache/unit_tests/: 001_lru_test.cpp  CMakeLists.txt  Catch.cmake  CatchAddTests.cmake  ParseAndAddCatchTests.cmake  catch.hpp
include/: lru_cache.h  predicting_cache.h  twoq_cache.h
